# space-invaders-game

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/game/: Cargo.toml
contracts/game/src/: game_state.rs  lib.rs  test.rs
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: contract.ts  game.ts  main.ts  styles.css
scripts/: deploy-testnet.sh  setup-repo.sh
