[package]
name = "space_invaders"
version = "0.2.0"
edition = "2021"
description = "Space Invaders on-chain game with OpenZeppelin Smart Accounts"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cougr-core = { tag = "v0.0.1", git = "https://github.com/salazarsebas/Cougr.git" }
soroban-sdk = "23.0.2"
stellar-accounts = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-accounts" }

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

